--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "Shashank Priyadarshi",
     "email": "s.priyadarshi629@gmail.com",
-    "url": "https://iamsh4shank.me"
+    "url": "https://iamsh4shank.github.io"
   },
   "license": "MIT",
   "repository": {
