--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iamsh4shank.me",
+  "name": "iamsh4shank.github.io",
   "description": "My personal website.",
   "version": "0.0.0",
   "author": {
